# bucket

./: CONTRIBUTING.md  Cargo.toml  README.md  Shuttle.toml  justfile
.github/workflows/: Shuttle.yml
scripts/: storage.sql
src/: auth.rs  main.rs
src/data/: mod.rs  shortlink.rs
src/router/: index.rs  link.rs  login.rs  logout.rs  memory.rs  mod.rs  not_found.rs  redirect.rs  shared.rs
src/services/: auth.rs  mod.rs  storage.rs
src/services/auth/: email.rs  magic.rs  mod.rs
static/css/: style.css
static/js/: bckt.js
templates/: 404.html  base.html  index.html
templates/content/: link.html  link_ok.html  login.html
templates/content/shared/: error.html  info.html  link_nav.html
templates/fragments/: link_ok.html
templates/shared/: _layout.html
