[package]
name = "bucket"
version = "0.1.0"
edition = "2021"
description = "link shortener and secret sharing service"
homepage = "https://www.bckt.xyz/"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plabayo/bucket"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["fs"] }
