[package]
name = "bucket"
version = "0.1.0"
edition = "2021"
description = "link shortener and secret sharing service"
homepage = "https://www.bckt.xyz/"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plabayo/bucket"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
axum = "0.6"
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.29"
shuttle-runtime = "0.29"
shuttle-secrets = "0.29"
tokio = "1.28"
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4", features = ["fs", "trace", "compression-full", "normalize-path"] }
