[package]
name = "bucket"
version = "0.1.0"
edition = "2021"
description = "link shortener and secret sharing service"
homepage = "https://www.bckt.xyz/"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plabayo/bucket"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
axum = "0.6"
base64 = "0.21"
base64-serde = "0.7"
chrono = "0.4"
hex = "0.4"
nanoid = "0.4"
orion = "0.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.31.0"
shuttle-secrets = "0.31.0"
shuttle-shared-db = { version = "0.31.0", features = ["postgres", "postgres-rustls"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.28"
tower = { version = "0.4", features = ["tracing"] }
tower-cookies = "0.9"
tower-http = { version = "0.4", features = ["fs", "trace", "compression-full", "normalize-path"] }
tracing = "0.1"
